-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2
-
None
-
816e4b59b4397c620b00fb353f1d9373d31b59e2 (qt/qtremoteobjects/dev)
The QtRemoteObject builds fail on QNX, due to failure to generate moc_predefs.h:
agent:2021/04/14 10:25:18 build.go:379: AutoMoc subprocess error agent:2021/04/14 10:25:18 build.go:379: ------------------------ agent:2021/04/14 10:25:18 build.go:379: The content generation command for "SRC:/build/target/src/remoteobjects/RemoteObjects_autogen/moc_predefs.h" failed. agent:2021/04/14 10:25:18 build.go:379: Command agent:2021/04/14 10:25:18 build.go:379: ------- agent:2021/04/14 10:25:18 build.go:379: /opt/qnx710/host/linux/x86_64/usr/bin/q++ -Wp,-dM -E -c /opt/cmake-3.19.2/share/cmake-3.19/Modules/CMakeCXXCompilerABI.cpp -D) -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_REMOTEOBJECTS_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_FROM_BYTEARRAY -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_URL_CAST_FROM_STRING -DQT_USE_QSTRINGBUILDER -DRemoteObjects_EXPORTS -D_FORTIFY_SOURCE=2 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_REENTRANT -D___contains___USE_HAM -I/home/qt/work/qt/qtremoteobjects/build/target/include -I/home/qt/work/qt/qtremoteobjects/build/target/include/QtRemoteObjects -I/home/qt/work/qt/qtremoteobjects/src/remoteobjects -I/home/qt/work/qt/qtremoteobjects/build/target/src/remoteobjects -I/home/qt/work/qt/qtremoteobjects/src/remoteobjects -I/home/qt/work/qt/qtremoteobjects/build/target/include/QtRemoteObjects/6.2.0 -I/home/qt/work/qt/qtremoteobjects/build/target/include/QtRemoteObjects/6.2.0/QtRemoteObjects -I/home/qt/work/install/target/include/QtCore -I/home/qt/work/install/target/include -I/home/qt/work/install/target/mkspecs/qnx-x86-64-qcc -I/home/qt/work/install/target/include/QtNetwork -I/home/qt/work/install/target/include/QtCore/6.2.0 -I/home/qt/work/install/target/include/QtCore/6.2.0/QtCore -I/opt/qnx710/target/qnx7/usr/include agent:2021/04/14 10:25:18 build.go:379: Output agent:2021/04/14 10:25:18 build.go:379: ------ agent:2021/04/14 10:25:18 build.go:379: <command-line>: error: macro names must be identifiers agent:2021/04/14 10:25:18 build.go:379: #define __SSP_STRONG__ 3 agent:2021/04/14 10:25:18 build.go:379: #define __DBL_MIN_EXP__ (-1021) agent:2021/04/14 10:25:18 build.go:379: #define __FLT32X_MAX_EXP__ 1024 agent:2021/04/14 10:25:18 build.go:379: #define __cpp_attributes 200809 agent:2021/04/14 10:25:18 build.go:379: #define __UINT_LEAST16_MAX__ 0xffff ...
Details: https://testresults.qt.io/coin/integration/qt/qtremoteobjects/tasks/1618395436
For Gerrit Dashboard: QTBUG-92845 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
343280,3 | Fix the QNX build | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |