Fix the QNX build

The check if USE_HAM is defined (to include the 'ham' library) was not
ported to CMake correctly. Added a CMake build option for optionally
enabling QNX's HAM, and fixed the check accordingly.

Fixed other build errors.

Fixes: QTBUG-92845
Change-Id: I43b55b02fefbdcc1779d3eecf4c37c87cbc02b9f
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>